<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewShowDataApiGet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/data_shows"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="@dimen/_20ssp"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textViewShowDataApiGet2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_16sdp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewShowDataApiGet2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/post_data"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintStart_toEndOf="@id/textViewShowDataApiGet"
        app:layout_constraintEnd_toStartOf="@id/textViewShowDataApiGet3"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_16sdp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewShowDataApiGet3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/put_data"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="@dimen/_20ssp"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewShowDataApiGet2"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvApiDataShow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/textViewShowDataApiGet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>